objects/SOA2TransactionAuditDetail__c.object
<CustomObject>
    <description>Object is used to store the audit information of viewed and downloaded PDF files. (Its created as a part of SOA Ph2)</description>
    <fields>
        <fullName>Doc_No__c</fullName>
        <label>Doc No</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downloaded_Date__c</fullName>
        <label>Downloaded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Downloaded_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Downloaded by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOA2TransactionAuditDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SOA2TransactionAuditDetails</relationshipLabel>
        <relationshipName>SOA2TransactionAuditDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewed_Date__c</fullName>
        <label>Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Viewed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Viewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOA2TransactionAuditDetails1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SOA2TransactionAuditDetail</label>
    <nameField>
        <displayFormat>TA- {000000000}</displayFormat>
        <label>Transaction Audit No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOA2TransactionAuditDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>